turtleart.flower3.Flower3.scala.code
override def run():Unit= {
  baisseCrayon()
  for (i<- 1 to 8) {
    droite(45)
    avance(20)
    gauche(90)
    avance(20)
    droite(45)
    avance(20)
    droite(90)
    avance(20)
    gauche(90)
    avance(20)
    gauche(90)
    avance(20)
    avance(20)
    gauche(90)
    avance(20)
    gauche(90)
    avance(20)
    droite(90)
    avance(20)
    droite(45)
    avance(20)
    gauche(90)
    avance(20)
    droite(45)
    droite(180)
    droite(45)
  }
  ]
}